// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Компонент Button рендерится без ошибок без текста 1`] = `
<button
  className="text text_type_button text_color_primary button small false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Компонент Button рендерится без ошибок в состоянии disabled 1`] = `
<button
  className="text text_type_button text_color_primary button small false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Компонент Button рендерится без ошибок с индикацией загрузки 1`] = `
<button
  className="text text_type_button text_color_primary button small loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Компонент Button рендерится без ошибок с текстом 1`] = `
<button
  className="text text_type_button text_color_primary button small false "
  type="button"
>
  <p
    className="text undefined"
  >
    Нажми на меня
  </p>
</button>
`;
